--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.2.0",
+    "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "~3.4.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-keyboard": "^4.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.8.0",
+    "ember-popper": "^0.9.2",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.4.0",
     "emberfire": "^2.0.10",
@@ -54,6 +57,8 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "dependencies": {
-    "@babel/core": "^7.1.2"
+    "@babel/core": "^7.1.2",
+    "animate.css": "^3.7.0",
+    "popper.js": "^1.14.4"
   }
 }
