--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli": "~3.4.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.16.0",
+    "ember-cli-bootstrap-4": "^0.7.0",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
@@ -34,6 +35,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-qunit": "^4.3.2",
+    "ember-cli-sass": "^7.2.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-showdown": "^4.4.4",
     "ember-cli-sri": "^2.1.1",
@@ -51,6 +53,7 @@
     "emberfire": "^2.0.10",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
+    "popper.js": "^1.14.4",
     "qunit-dom": "^0.7.1"
   },
   "engines": {
@@ -58,7 +61,6 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
-    "animate.css": "^3.7.0",
-    "popper.js": "^1.14.4"
+    "animate.css": "^3.7.0"
   }
 }
