--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-keyboard": "^4.0.0",
     "ember-load-initializers": "^1.1.0",
+    "ember-material-icons": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.8.0",
     "ember-popper": "^0.9.2",
